@@ -1,5 +1,9 @@
 2019-11-11  Claudiu Zissulescu <claziss@gmail.com>
 
+	* gcc.target/arc/delay-slot-limm.c: New test.
+
+2019-11-11  Claudiu Zissulescu <claziss@gmail.com>
+
 	* gcc.target/arc/pic-2.c: New file.
 
 2019-11-11  Tobias Burnus  <tobias@codesourcery.com>
